# Actors

./: build.xml  dsl.md
.mps/: migration.xml  modules.xml
docker-spark/: Dockerfile  docker_build.sh  docker_run.sh  queries.py  requirements.txt  run_stats.sh  stats.sh
docker-spark/stats-windows/: stats-10800.csv  stats-21600.csv  stats-3600.csv  stats-43200.csv  stats-60.csv  stats-64800.csv  stats-7200.csv  stats-86400.csv
generated.caches/ActorLanguage/sandbox/: dependencies  generated
generated_sources.caches/QueryLanguage/sandbox/: generated
languages/ActorLanguage/: ActorLanguage.mpl
languages/ActorLanguage.sandbox/: ActorLanguage.sandbox.msd
languages/ActorLanguage.sandbox/models/: ActorLanguage.sandbox.mps
languages/ActorLanguage.sandbox/source_gen.caches/: deps.cp
languages/ActorLanguage/models/: ActorLanguage.actions.mps  ActorLanguage.behavior.mps  ActorLanguage.constraints.mps  ActorLanguage.editor.mps  ActorLanguage.feedback.mps  (+4 more)
languages/Echoes/: Echoes.mpl
languages/Echoes.sandbox/: Echoes.sandbox.msd
languages/QueryLanguage/: QueryLanguage.mpl
languages/QueryLanguage.sandbox/: QueryLanguage.sandbox.msd
languages/QueryLanguage.sandbox.caches/: deps.cp
pseudo-sql/: CMakeLists.txt
pseudo-sql/src/: CMakeLists.txt  condition_parser.h  sql_operations.c  sql_operations.h  utils.c  utils.h
pseudo-sql/test/: aggregate_functions.c  selection.c
pseudosql/: CMakeLists.txt
pseudosql/src/: CMakeLists.txt  condition_parser.c  condition_parser.h  rootsim_operations.c  rootsim_operations.h  sql_operations.c  sql_operations.h  utils.c  utils.h
pseudosql/src/include/: pseudosql.h
pseudosql/src/test_root_sim/: CMakeLists.txt  Makefile  test_root_sim2.c
pseudosql/src/test_root_sim/experiments/: script-windows.sh  script.sh  stats_windows.csv
pseudosql/src/test_root_sim/experiments/stats_threads/: stats_1.csv  stats_2.csv  stats_3.csv  stats_4.csv  stats_5.csv  stats_6.csv  stats_7.csv  stats_8.csv
pseudosql/src/test_root_sim/experiments/stats_windows/: stats_window_10800.csv  stats_window_14400.csv  stats_window_1800.csv  stats_window_18000.csv  stats_window_21600.csv  stats_window_25200.csv  stats_window_28800.csv  stats_window_32400.csv  stats_window_3600.csv  stats_window_36000.csv  stats_window_39600.csv  stats_window_43200.csv  stats_window_46800.csv  stats_window_50400.csv  stats_window_54000.csv  stats_window_57600.csv  stats_window_60.csv  stats_window_61200.csv  stats_window_64800.csv  stats_window_68400.csv  stats_window_7200.csv  stats_window_72000.csv  stats_window_75600.csv  stats_window_79200.csv  stats_window_82800.csv  stats_window_86400.csv
pseudosql/src/test_root_sim/experiments_results/: stats_1.txt  stats_2.txt  stats_3.txt  stats_4.txt  stats_5.txt  stats_6.txt  stats_7.txt  stats_8.txt
pseudosql/test/: CMakeLists.txt  groupby.c  join.c  orderby.c  projection.c
solutions/ActorLanguage.sandbox/: ActorLanguage.sandbox.msd
solutions/Actors.build/: Actors.build.msd
solutions/Actors.build0/: Actors.build0.msd
solutions/NewSolution/: NewSolution.msd
spark-queries/: queries.py
test_root_sim/: Makefile  Query.csv  Query2.csv  Query3.csv  Query4.csv  Query5.csv  Query6.csv  Query7.csv  Query8.csv  add-date-time.py  check.py  sort_csv.py  taxi-1.csv  taxi_100.csv  taxi_1000.csv  test  test.c  test_count  test_count.c  test_join  test_join.c  test_root_sim  test_root_sim.c  test_root_sim.h  test_root_sim2  test_root_sim2.c  test_root_sim2_serial  test_root_sim2_serial.c  test_select  test_select.c  test_window.c  test_windows  test_windows.c
(+482 files in other folders)
